<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friendlist.AddFriendFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.94" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineH3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

        <EditText
            android:id="@+id/friendSearch"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="?attr/text_color"
            android:clickable="true"
            android:cursorVisible="true"
            android:focusable="true"
            android:hint="?attr/enter_the_name_of_your_friend"
            android:inputType="text"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColorHint="?attr/text_color"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/guidelineH1"
            app:layout_constraintLeft_toRightOf="@id/guidelineV"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/guidelineH" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/guidelineH2"
            app:layout_constraintLeft_toRightOf="@id/guidelineV"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/guidelineH1">

            <ListView
                android:id="@+id/allUserList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:smoothScrollbar="false" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineV3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/gradientPrimary_color"
            android:text="?attr/go_back"
            app:layout_constraintBottom_toTopOf="@id/guidelineH3"
            app:layout_constraintLeft_toRightOf="@id/guidelineV3"
            app:layout_constraintRight_toLeftOf="@id/guidelineV1"
            app:layout_constraintTop_toBottomOf="@id/guidelineH2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>