...
            android:text="@string/friendname"
            android:textAlignment="center"
            android:textSize="24sp"
            android:focusable="false"/>

        <Button
            android:id="@+id/manageFriendButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="?attr/remove_friend"
            android:backgroundTint="?attr/gradientPrimary_color"
            android:focusable="false"/>

...
