...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

        <Button
            android:id="@+id/FriendList_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="?attr/friendList"
            android:backgroundTint="?attr/gradientPrimary_color"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="355dp"
...
