...
            app:layout_constraintBottom_toTopOf="@id/guidelineH2"
            app:layout_constraintTop_toBottomOf="@id/guidelineH1"
            app:layout_constraintLeft_toRightOf="@id/guidelineV"
            app:layout_constraintRight_toLeftOf="@id/guidelineV2"/>

        <Button
            android:id="@+id/addFriendBouton"
            android:backgroundTint="?attr/gradientPrimary_color"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="?attr/add_friend"
            app:layout_constraintBottom_toTopOf="@id/guidelineH2"
            app:layout_constraintTop_toBottomOf="@id/guidelineH1"
...
