<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gameMenuFragmentContainer"
    tools:context=".GameMenuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintBottom_toTopOf="@+id/guideline2">

            <ImageButton
                android:id="@+id/planthuntThumbnail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="displayPlanthuntDescription"
                android:scaleType="fitXY"
                android:transitionName="planthunt_transition"
                app:srcCompat="@drawable/planthunt_thumbnail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/planthuntPlay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/play_button_right"
                android:backgroundTint="@color/planthuntPlayColor"
                android:fontFamily="serif"
                android:text="►"
                android:textColor="#FFFFFF"
                android:textSize="80sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            app:layout_constraintLeft_toRightOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/guideline6"
            app:layout_constraintBottom_toTopOf="@+id/guideline3">

            <ImageButton
                android:id="@+id/kneetagThumbnail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="displayKneetagDescription"
                android:scaleType="fitXY"
                android:transitionName="kneetag_transition"
                app:srcCompat="@drawable/kneetag_thumbnail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/kneetagPlay"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/play_button_right"
                android:backgroundTint="@color/kneetagPlayColor"
                android:fontFamily="serif"
                android:text="►"
                android:textColor="#FFFFFF"
                android:textSize="80sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/lin"
            app:layout_constraintBottom_toTopOf="@id/lin2"
            app:layout_constraintGuide_percent="0.1" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.93" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="?attr/LeaderBoard"
            android:backgroundTint="?attr/profileField_color"
            android:textColor="?attr/text_color"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintRight_toLeftOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/guideline7"
            app:layout_constraintBottom_toTopOf="@id/guideline8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>