...
    tools:context=".HomeScreenActivity"
    android:background="?attr/fragView_color"
    android:id="@+id/HomeView">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:background="?attr/fragView_color"
        android:backgroundTint="?attr/text_color"
        app:itemTextColor="?attr/text_color"
        app:itemIconTint="?attr/text_color"
        android:layout_height="0dp"
...
