...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

        <ImageButton
            android:id="@+id/plantDescButtonBack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:background="@null"
            android:src="@drawable/planthunt_description"
            android:transitionName="planthunt_transition"
...
